--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-heroku==0.0.0
 django-on-heroku==1.1.2
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
+gunicorn==20.1.0
 Pillow==8.2.0
 psycopg2-binary==2.9.1
 PyJWT==1.7.1
